src/main/resources/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-docker-test
  labels:
    app: kubernetes-docker-test
spec:
  replicas: 4
  selector:
    matchLabels:
      app: kubernetes-docker-test
  template:
    metadata:
      labels:
        app: kubernetes-docker-test
    spec:
      containers:
        - name: kubernetes-docker-test
          image: 29112911291129112911/kubernetes-docker-test
          ports:
            - containerPort: 8080
