src/main/resources/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-docker-test
spec:
  selector:
    app: kubernetes-docker-test
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
