src/main/resources/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: elvina
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: kubernetes-docker-test
              servicePort: 8081
